RockWeb/Styles/rock-components/custom-select.less
//
// Custom Select - styling for custom select control
// --------------------------------------------------

/* Global Styles */



.custom-select-item {
    padding: var(--spacing-medium);
}

.custom-select-item:not(.custom-select-item-disabled) {
  cursor: pointer;
}

.custom-select-item-disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.custom-select-expand-icon {
  color: rgba(0, 0, 0, 0.25);
  position: absolute;
  line-height: 10px;
  cursor: pointer;
  top: 50%;
  transform: translateY(-50%);
  right: var(--spacing-medium);
  font-size: 14px;
}

/* Mobile Styles */
.custom-select-mobile-wrapper,
.custom-select-wrapper {
  position: relative;
  border: 1px solid var(--color-interface-soft);
  border-radius: var(--rounded-small);
  overflow: clip;
}

.custom-select-mobile-wrapper.is-closed {
  border: 0;
}

.custom-select-mobile-wrapper .custom-select-item {
  --border-radius: var(--rounded-small);
}

.custom-select-mobile-wrapper .custom-select-item-content {
  margin-right: ~"calc( var(--spacing-medium) + 8.5px)"; // Add space for the controls selector (up/down arrow)
}

/* Fade Transition */
.fade-enter-active {
  transition: opacity 0.25s ease .35s;
}

.fade-leave-active {
  transition: opacity .15s ease;
}

.fade-enter-to,
.fade-leave-from {
  opacity: 1;
}

.fade-enter-from,
.fade-leave-to {
  opacity: 0;
}

